@@ -33,7 +33,7 @@ Zm = ma.masked_where(Z > 1.2, Z)
 
 im = imshow(Zm, interpolation='bilinear',
     cmap=palette,
-    norm = colors.normalize(vmin = -1.0, vmax = 1.0, clip = False),
+    norm = colors.Normalize(vmin = -1.0, vmax = 1.0, clip = False),
     origin='lower', extent=[-3,3,-3,3])
 title('Green=low, Red=high, Blue=bad')
 colorbar(im, extend='both', shrink=0.8)
