@@ -1,3 +1,7 @@
+2006-12-02 Changed class names in colors.py to match convention:
+           normalize -> Normalize, no_norm -> NoNorm.  Old names
+           are still available.
+
 2006-11-22 Fixed bug in set_*lim that I had introduced on 11-15 - EF
 
 2006-11-22 Added examples/clippedline.py, which shows how to clip line
